# pyevereader

./: Cargo.toml  main.py  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
pyevereader/: __init__.py
src/: lib.rs  main.rs
src/eve_process/: eve_process.rs  mod.rs  module.rs  process.rs  py_struct.rs  pyobject_parser.rs
src/py_wrapper/: mod.rs
