[package]
name = "pyevereader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyevereader"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "playground"
path = "src/main.rs"

[dependencies]
pyo3 = "0.22.0"
winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi", "handleapi", "memoryapi", "tlhelp32", "debugapi", "minwindef", "winnt", "ntdef", "winuser", "windef"] }
libc = "0.2.155"
wildmatch = "2.3.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.10"
strum_macros = "0.26.4"
bytemuck = "1.18.0"
lazy_static = "1.5.0"
lru = "0.12.5"
timeit = "0.1.2"
profiling = "1.0"
rustc-hash = "2.0"
smart-default = "0.7.1"
loop-code = "0.5.2"
repr_offset = { version = "0.2", features = ["derive"] }

[profile.release]
opt-level = 3
debug = true
strip = true
lto = true

[features]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]